# mastermind

./: .gitignore  LICENSE  README.md  mastermind.cabal
src/: Main.hs
