name:                mastermind
version:             0.1.0.0
synopsis:            Our solution for mastermind game.
description:         Please see README.md
homepage:            https://github.com/CHSSPhoenix/mastermind#readme
license:             BSD3
license-file:        LICENSE
author:              CHSS
maintainer:          chss.phoenix@gmail.com
copyright:           2016 CHSS
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mastermind
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random >= 1.1 && < 2
